--- a/netflixproject.ipynb
+++ b/netflixproject.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "hLA_rB_3AHfr"
       },
@@ -54,7 +54,7 @@
       "metadata": {
         "id": "afJM8sw5AH_v"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -67,7 +67,7 @@
       "metadata": {
         "id": "vbjsoKI6AaM5"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -84,7 +84,7 @@
       "metadata": {
         "id": "MqqXSQ0DAf7U"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "JrtwOxPvAjT8"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -109,7 +109,7 @@
       "metadata": {
         "id": "2HiMOoIlAjPU"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -125,9 +125,9 @@
           "height": 80
         },
         "id": "twobmUYaAjLV",
-        "outputId": "b4008d91-f91e-4737-fdd2-87dc9ddbbfb1"
+        "outputId": "c621e9d2-549d-44a0-cc0d-a9ba3735efb5"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -568,7 +568,7 @@
       "metadata": {
         "id": "RPvApiy_Asqk"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -583,9 +583,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y0yMLKdEAsnk",
-        "outputId": "d40d633c-bebf-4d70-e3a9-dc97e2000470"
+        "outputId": "e8d8c399-4fd2-4cf1-f41b-68a81547e32e"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -614,7 +614,7 @@
       "metadata": {
         "id": "jXv4PaPrBBCM"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -632,15 +632,15 @@
           "height": 594
         },
         "id": "EXGytNqABcI0",
-        "outputId": "f4f41906-5a30-4c41-eded-68a7cbced7cd"
+        "outputId": "882cba62-ffce-4366-f07c-ef13763bb260"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-11-5cba84036ee7>:3: FutureWarning: \n",
+            "/tmp/ipython-input-11-1220379771.py:3: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
@@ -663,9 +663,9 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "JjChWKxfBdxt"
+        "id": "jstBRStZcxnV"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -684,9 +684,9 @@
           "height": 661
         },
         "id": "SrGWMXL8BfqU",
-        "outputId": "5c7c73e7-b863-4777-84a7-991d272cc889"
+        "outputId": "06ae2c66-0a9b-4ed8-9d5c-cabd91553c42"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -720,9 +720,9 @@
           "height": 487
         },
         "id": "7lf90KbSBoYU",
-        "outputId": "f6d3527c-a5e5-49c2-a35b-f53a9b22ffbe"
+        "outputId": "7153dd5f-aff1-4992-e5fe-54eecc120362"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
